--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.2.2",
+    "@rails/webpacker": "^5.4",
     "bootstrap": "^4.5.2",
     "cookies-eu-banner": "^2.0.1",
     "jquery": "^3.5.1",
