--- a/config/database.yml
+++ b/config/database.yml
@@ -17,10 +17,12 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  username: <%= ENV.fetch("DATABASE_USER") %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD") %>
+  host:  <%= ENV.fetch("DATABASE_HOST") %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
+  port: <%= ENV['DATABASE_PORT'] || '5432' %>
+  timeout: 5000
 development:
   <<: *default
   database: pat_rails_development
